--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -810,10 +810,10 @@ services
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  border-radius: 20px;
+  border-radius: 60px;
   text-align: center;
-  color: #fff;
-  padding: 40px;
+  color: rgb(255, 255, 255);
+  padding: 20px;
 }
 
 .services .item .icon {
@@ -1090,7 +1090,7 @@ section.apply-now .item p {
   padding: 20px;
   font-size: 18px;
   font-weight: 700;
-  color: #1f272b;
+  color: #292b1f;
   cursor: pointer;
   transition: color 200ms ease-in-out;
   border-bottom: 1px solid #fff;
